--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "leaflet": "^1.9.4",
     "lucide-react": "^0.507.0",
     "next": "15.2.4",
+    "perfect-scrollbar": "^1.5.6",
     "react": "^18.2.0",
     "react-apexcharts": "^1.7.0",
     "react-bootstrap": "^2.10.9",
