--- a/package.json
+++ b/package.json
@@ -21,13 +21,20 @@
     "@fullcalendar/react": "^6.1.18",
     "@fullcalendar/timegrid": "^6.1.18",
     "@react-google-maps/api": "^2.20.6",
-    "@tiptap/react": "^2.11.7",
-    "@tiptap/starter-kit": "^2.11.7",
+    "@tiptap/extension-bold": "^3.6.2",
+    "@tiptap/extension-bullet-list": "^3.6.2",
+    "@tiptap/extension-italic": "^3.6.2",
+    "@tiptap/extension-list-item": "^3.6.2",
+    "@tiptap/extension-ordered-list": "^3.6.2",
+    "@tiptap/extension-underline": "^3.6.2",
+    "@tiptap/react": "^3.6.2",
+    "@tiptap/starter-kit": "^3.6.2",
     "aos": "^2.3.4",
     "axios": "^1.8.4",
     "bootstrap": "^5.3.7",
     "bootstrap-icons": "^1.13.1",
     "chart.js": "^4.4.8",
+    "dompurify": "^3.2.7",
     "firebase": "^11.7.1",
     "font-awesome": "^4.7.0",
     "jwt-decode": "^4.0.0",
@@ -42,6 +49,7 @@
     "react-datepicker": "^8.3.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.5.0",
+    "react-quill": "^2.0.0",
     "react-spinners": "^0.17.0",
     "react-time-picker": "^7.0.0",
     "react-toastify": "^11.0.5",
