--- a/package.json
+++ b/package.json
@@ -30,11 +30,14 @@
     "@tiptap/react": "^3.6.2",
     "@tiptap/starter-kit": "^3.6.2",
     "aos": "^2.3.4",
+    "asynckit": "^0.4.0",
     "axios": "^1.8.4",
     "bootstrap": "^5.3.7",
     "bootstrap-icons": "^1.13.1",
     "chart.js": "^4.4.8",
+    "combined-stream": "^1.0.8",
     "dompurify": "^3.2.7",
+    "dunder-proto": "^1.0.1",
     "firebase": "^11.7.1",
     "font-awesome": "^4.7.0",
     "jwt-decode": "^4.0.0",
