--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "jwt-decode": "^4.0.0",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.507.0",
-    "next": "15.2.4",
+    "next": "^16.0.10",
     "perfect-scrollbar": "^1.5.6",
     "react": "^18.2.0",
     "react-apexcharts": "^1.7.0",
