--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "lucide-react": "^0.507.0",
     "next": "^16.0.10",
     "perfect-scrollbar": "^1.5.6",
+    "qrcode.react": "^4.2.0",
     "react": "^18.2.0",
     "react-apexcharts": "^1.7.0",
     "react-bootstrap": "^2.10.9",
